--- a/.github/workflows/develop_cli_cd.yml
+++ b/.github/workflows/develop_cli_cd.yml
@@ -20,3 +20,14 @@ jobs:
       - name: Test
         run: |
           npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+
+      - name: build angular, output in dist/mycv
+        run: |
+          CI=flase npm run build
+      
+      - name: show dir
+        run: |
+          ls -la dist
+      
+     
+      
