--- a/.github/workflows/develop_cli_cd.yml
+++ b/.github/workflows/develop_cli_cd.yml
@@ -39,10 +39,24 @@ jobs:
       - name: cp angular build to container
         run: |
           docker cp dist/mycv/browser/.  serving_base:/usr/local/apache2/htdocs
-
+          
       - name: list container
         run: |
           docker exec serving_base ls -la /usr/local/apache2/htdocs
-      
-     
-      
+
+      - name: Build the custom Docker image
+        run: docker commit --change "ENV MODEL_NAME ${{secrets.MODEL_NAME}}" 
+             serving_base ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{github.sha}}
+
+      - name: show docker images
+        run: docker images
+
+      - name: docker login
+        env:
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+
+      - name: Docker push 
+        run: docker push ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{github.sha}}
