--- a/angular.json
+++ b/angular.json
@@ -87,10 +87,14 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "ccd1d5c6-8dd4-4032-83df-7686379f65eb"
   }
 }
